@@ -1,3 +1,8 @@
+2013-01-26  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tclUnixCompat.c: [Bug 3601804]: platformCPUID segmentation
+	fault on Darwin.
+
 2013-01-16  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* Makefile.in: Enable win32 build with -DTCL_NO_DEPRECATED, just
